projects/vb6parse/snapshots/tests/library/resources/loadrespicture/loadrespicture_icon.snap
---
source: projects/vb6parse/tests/library/resources/loadrespicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: Image1
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Picture
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: LoadResPicture
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "102"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: vbResIcon
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
